Date field fixed on safari and form works

--- a/src/components/SubmitUpdateForm.css
+++ b/src/components/SubmitUpdateForm.css
@@ -33,7 +33,8 @@ input[type="text"]:focus {
 }
 
 input[type="submit"], 
-input[type="date"], 
+input[type="date"],
+.date-picker,
 select {
   display: block; 
   padding: 10px 20px;
